...
            }
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button(action: {
                        showLoginView = true
                    }) {
                        Label("Add Item", systemImage: "person.circle")
                    }
                    
                }
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        showAddRouteView = true
...
                        Label("Add Item", systemImage: "plus")
                    }
                }

            }
            .navigationBarTitle(
                Text("Route List")
            )
            .sheet(isPresented: $showLoginView, content: {
                SignUpAndLoginView(showLoginView: $showLoginView, isLoggedIn: $isLoggedIn, isSigningUp: $isSigningUp, username: $username, alertTitle: $alertTitle, showAlert: $showAlert)
            })
            .sheet(isPresented: $showAddRouteView, content: {
                AddRouteView(showAddRouteView: $showAddRouteView)
...
